syntax = "proto3";

package gnovm.gnovm.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "gnovm/gnovm/v1/params.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/ignite/gnovm/x/gnovm/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  
  // AddPackage defines the AddPackage RPC.
  rpc AddPackage (MsgAddPackage) returns (MsgAddPackageResponse);
  
  // Call defines the Call RPC.
  rpc Call (MsgCall) returns (MsgCallResponse);
  
  // Run defines the Run RPC.
  rpc Run (MsgRun) returns (MsgRunResponse);
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                     "authority";
  option           (amino.name) = "gnovm/x/gnovm/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgAddPackage defines the MsgAddPackage message.
message MsgAddPackage {
  option (cosmos.msg.v1.signer) = "creator";
  string                   creator = 1;
  repeated cosmos.base.v1beta1.Coin deposit = 2 [(gogoproto.nullable) = false];
}

// MsgAddPackageResponse defines the MsgAddPackageResponse message.
message MsgAddPackageResponse {}

// MsgCall defines the MsgCall message.
message MsgCall {
  option (cosmos.msg.v1.signer) = "caller";
  string                   caller   = 1;
  repeated cosmos.base.v1beta1.Coin send     = 2 [(gogoproto.nullable) = false];
  string                   pkg_path = 3;
  string                   function = 4;
  repeated string                   args     = 5;
}

// MsgCallResponse defines the MsgCallResponse message.
message MsgCallResponse {}

// MsgRun defines the MsgRun message.
message MsgRun {
  option (cosmos.msg.v1.signer) = "caller";
  string                   caller  = 1;
  repeated cosmos.base.v1beta1.Coin send    = 2 [(gogoproto.nullable) = false];
  bytes                    pkg     = 3;
}

// MsgRunResponse defines the MsgRunResponse message.
message MsgRunResponse {}

